<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="login">Email address</string>
    <string name="password">Password</string>
    <string name="signin">Sign in</string>
    <string name="signin_required_f1_tv_pro_account">A F1Tv/F1TvPro account is required to login</string>
    <string name="invalid_credentials">Credentials invalid</string>
    <string name="rejected_credentials">Wrong email or password</string>
    <string name="rejected_credentials_message">
        Sometimes this might happen even if your login and password are correct due a <b>F1 API BUG</b>.\n\n
        1. If that is the case a possible workaround is to <b>go to F1TV website on your computer</b>,
        then login on your account and logout then come
        back to the app and it will eventually work.\n
        2. It is also possible that for some reason your IP is blocked (401 response) in this case try
        to switch networks it might also work. In this case you have to reach F1 support as well.
    </string>

    <string name="unable_to_play_video_message">Something went wrong while trying to play this video</string>
    <string name="audio_selection_dialog_title">Audio</string>
    <string name="video_selection_dialog_title">Video</string>
    <string name="video_selection_quality_auto">Auto</string>
    <string name="unable_to_open_with_external_player">No supported external player detected, please install a supported player such as VLC and try again, or disable the open with external player feature</string>
    <string name="watching_on_external_player">You are watching the content with an external player</string>

    <string name="choose_a_season">Select a season</string>

    <string name="teaser_image_text">Current season: %1$d</string>
    <string name="teaser_image_description">Current season</string>

    <string name="home_all">Show all</string>
    <string name="home_archive">Archive</string>

    <string name="settings_content_description">Settings</string>
    <string name="settings_category_player_title">Player</string>
    <string name="settings_stream_type_title">Select the stream format (beta)</string>
    <string name="settings_bypass_channel_selection_title">Bypass channel selection</string>
    <string name="settings_bypass_channel_selection_summary">If ON after select a event you will be immediately redirected to the player in the general broadcast</string>
    <string name="settings_display_thumbnails_enabled_title">Display Thumbnails</string>
    <string name="settings_display_thumbnails_enabled_summary">Thumbnails may contain spoilers. Turning this OFF will disable thumbnail images</string>
    <string name="settings_open_with_external_player_title">Open with external player (beta)</string>
    <string name="settings_reset_to_default_title">Reset settings to default</string>
    <string name="settings_open_with_external_player_summary">If ON we will use an external player to play content instead the built in player</string>
    <string name="settings_category_other_title">Other</string>
    <string name="settings_donations_title">Donations</string>
    <string name="settings_donations_summary">Support the project by buying the developer a beer</string>
    <string name="settings_logout_title">Logout</string>
    <string name="donations_explanation_summary">Scan the QR code bellow with your phone, you will be redirected to the BuyMeACoffee page where you can donate</string>
</resources>
